--- a/style/style.css
+++ b/style/style.css
@@ -211,6 +211,33 @@
     font-weight: 500;
     font-style: normal;
 }
+
+/* arrow icon */
+.arrow{
+    margin-top: 80px;
+    margin-bottom: 100px;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    gap: 20px;
+    margin-left: calc(50% - 100px + 10px);
+    margin-right: calc(50% - 100px + 10px);
+}
+.arrow-1{
+    border-radius: 50%;
+    background-color: #F0AA00;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+}
+/* our stories */
+.bg-img-2{
+    background-image: url(/assets/bg.png);
+    position: relative;
+    background-size: cover;
+}
+
 /* media query */
 @media screen and (max-width: 576px) {
     .nav-links{
@@ -253,5 +280,18 @@
     }
     .navbar-discription{
         font-size: 14px;
+    }
+    .standard-curriculum{
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;      
+        margin-top: 20px;  
+    }
+    .Standard-cur{
+        font-size: 1rem;
+        margin-top: 30px;
+    }
+    .arrow{
+        display: none;
     }
 }
