--- a/style/style.css
+++ b/style/style.css
@@ -231,12 +231,214 @@
     height: 40px;
     padding: 10px;
 }
+
+
 /* our stories */
-.bg-img-2{
-    background-image: url(/assets/bg.png);
-    position: relative;
+.bg-img-gra{
+    background-image:
+    linear-gradient(to bottom, 
+                            rgba(255, 255, 255, 1), 
+                            rgba(254, 163, 1, 0.3)),
+    url('/assets/bg.png');
+    /* color: white; */
+    height: auto;
     background-size: cover;
+    background-position: center;
+    /* background-image: linear-gradient(#FFFFFF,#FEA301); */
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
+.navbar-3{
+    
+}
+.Storie-main-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: auto;
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 3rem;
+    font-weight: 600;
+    font-style: normal;
+    margin-bottom: 80px;
+}
+.story-1{
+    width: 500px;
+    height: 622px;
+    /* position: absolute; */
+    background-color: white;
+    align-items: center;
+    text-align: center;
+}
+.date-btn-1{
+    width: 100px;
+    height: 15px;
+    border-radius: 45px;
+    color: white;
+    background-color: #3CD8E8;
+    padding: 15px 18px;
+    font-size: 1rem;
+    font-weight: 500;
+    position: relative;
+    left: 25px;
+    margin-top: -30px;
+}
+.img-story-1{
+    width: 500px;
+    height: 350px;
+}
+.story-1-head{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-style: normal;
+}
+.story-1-description{
+    font-family: "Raleway", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1rem;
+    align-items: center;
+    color: #666666;
+}
+.grid-container-1{
+    width: 290px;
+    height: 301px;
+    background-color: white;
+    align-items: center;
+    text-align: center;
+}
+
+.datebar-1{
+    background-color: #95B226;
+    width: 130px;
+    height: 10px;
+    border-radius: 45px;
+    color: white;
+    padding: 15px 18px;
+    font-size: 1rem;
+    font-weight: 500;
+    position: relative;
+    left: 25px;
+    margin-top: -27px;
+}
+.datebar-2{
+    background-color: #5D58F0;
+    width: 130px;
+    height: 10px;
+    border-radius: 45px;
+    color: white;
+    padding: 15px 18px;
+    font-size: 1rem;
+    font-weight: 500;
+    position: relative;
+    left: 25px;
+    margin-top: -27px;
+}
+
+
+.dis-container-1{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-style: normal;
+}
+.row{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+}
+.btn-enroll-2{
+    font-size: 1.25rem;
+    padding: 7px 30px;
+    color: white;
+    background-color: black;
+    border-radius: 10px;
+    margin-top: 80px;
+    margin-bottom: 60px;
+  }
+
+/* footer */
+.display-flex{
+    display: flex;
+    /* align-items: center; */
+}
+.font-style{
+    color: black;
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 2rem;
+    font-weight: 600;
+    font-style: normal;
+}
+.img-logo-2{
+    width: 75px;
+    height: 75px;
+}
+.footer-dis{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.25rem;
+    font-weight: 200;
+    font-style: normal;
+    width: 380px;
+    height: auto;
+}
+.int-sch{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-style: normal;
+    /* color: white; */
+}
+.int-sch-abo{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.25rem;
+    font-weight: 400;
+    font-style: normal;
+    /* color: white; */
+}
+.soc-link{
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
+    font-size: 1.625rem;
+    font-weight: 600;
+    font-style: normal;
+    /* color: white; */
+}
+.footer-main-nav {
+    display: flex;
+    gap: 150px;
+    justify-content: center;
+    width: 1250px;
+    height: 300px;
+    padding: 50px 50px;
+    background-color: #01ACFD;
+}
+.footer-main {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-items {
+    display: flex;
+    align-items: center; 
+}
+
+.footer-main p {
+    margin-top: 10px; 
+}
+
 
 /* media query */
 @media screen and (max-width: 576px) {
@@ -251,7 +453,17 @@
         /* padding-bottom: 10px; */
     }
     .header-container{
+        position: relative;
         margin: auto;
+    }
+    .header-container::after {
+        content: '';
+        display: block;
+        border-bottom: 2px solid black;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        right: 0
     }
     .menubar{
         display: block;
@@ -293,5 +505,81 @@
     }
     .arrow{
         display: none;
+    }
+    .story-1{
+        display: none;
+    }
+    .row{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        width: 100%;
+        height: auto;
+        margin: 0;
+    }
+    .grid-container-1{
+        width: 200px;
+        height: auto;
+        background-color: white;
+        align-items: center;
+        text-align: center;
+    }   
+    .img-container{
+        width: 200px;
+    }
+    .dis-container-1{
+        font-size: 0.5625rem;
+    }
+    .datebar-2{
+        background-color: #5D58F0;
+        width: 100px;
+        height: 10px;
+        border-radius: 45px;
+        color: white;
+        padding: 8px 8px;
+        font-size: 0.565rem;
+        font-weight: 500;
+        position: relative;
+        left: 25px;
+        margin-top: -20px;
+    }
+    .datebar-1{
+        background-color: #95B226;
+        width: 100px;
+        height: 10px;
+        border-radius: 45px;
+        color: white;
+        padding: 8px 8px;
+        font-size: 0.565rem;
+        font-weight: 500;
+        position: relative;
+        left: 25px;
+        margin-top: -20px;
+    }
+    .btn-father{       
+        margin-right: -220px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .btn-enroll-2{
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+    .footer-main-nav {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        justify-content: center;
+        width: 325px;
+        height: auto;
+        padding: auto;
+        overflow: hidden;
+        /* margin-left: auto; */
+    }
+    .footer-dis{
+        width: 100%;
+        height: auto;
+        font-size: 1rem;
     }
 }
